--- a/Admin-Cinerma/WebContent/bootstrap/css/mystyle.css
+++ b/Admin-Cinerma/WebContent/bootstrap/css/mystyle.css
@@ -3,7 +3,8 @@
 
 }
 #wrapper {	
-	width: 960px;
+	/* width: 960px; */
+	width: auto;
 	height: 700px;
 	background-color: #FF9999;
 	margin-left: auto;
@@ -11,22 +12,23 @@
 }
 
 #header {
-	width: 960px;
+	width: auto;
 	height: 100px;
 	background-color: #FF9900;
 	margin-left: auto;
 	margin-right: auto;
+	text-align:center;
 }
 
 #leftbar {
-	width: 120px;
+	width: 10%;
 	height: 600px;
 	background-color: #00FF33;
 	float: left;
 }
 
 #content {
-	width: 840px;
+	width: 90%;
 	height: 600px;
 	background-color: #00FF99;
 	float: right;
