--- a/Admin-Cinerma/.settings/org.eclipse.wst.common.component
+++ b/Admin-Cinerma/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Movie_0825_1800">
+    <wb-module deploy-name="admin system">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Movie_0825_1800/build/classes"/>
-        <property name="context-root" value="Movie_0825_1800"/>
+        <property name="context-root" value="admin_system"/>
+        <property name="java-output-path" value="/admin system/build/classes"/>
     </wb-module>
 </project-modules>
